--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
+
     <title>Document</title>
 </head>
 
 <body>
-    <!-- Header Section
-–––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Navbar Section -->
+
 
     <header id="header">
         <div class="main_nav">
@@ -20,20 +23,19 @@
                 <nav>
                     <ul>
                         <li><a class="smoothscroll" href="#header">Home</a></li>
-                        <li><a class="smoothscroll" href="#about">About</a></li>
-                        <li><a class="smoothscroll" href="#skills">Services</a></li>
-                        <li><a class="smoothscroll" href="#portfolio">Work</a></li>
-                        <li><a class="smoothscroll" href="#contact">Contact</a></li>
+                        <li><a class="smoothscroll" href="#about">Sobre mi</a></li>
+                        <li><a class="smoothscroll" href="#skills">Herramientas</a></li>
+                        <li><a class="smoothscroll" href="#portfolio">Proyectos</a></li>
+                        <li><a class="smoothscroll" href="#contact">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
-        
         <div class="title">
             <div><span class="typcn typcn-heart-outline icon heading"></span></div>
             <div class="smallsep heading"></div>
-            <h1 class="heading"> Clean & Simple</h1>
-            <h2 class="heading">Lorem ipsum dolor sit amet</h2>
+            <h1 class="heading"> Ismary Salges</h1>
+            <h2 class="heading">Front-End Developer & Administradora de Empresas</h2>
             <a class="smoothscroll" href="#about">
                 <div class="mouse">
                     <div class="wheel"></div>
@@ -45,52 +47,36 @@
         </a>
     </header>
 
-    <!-- About Section
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Sobre mi Section-->
 
     <section id="about">
         <div class="container">
             <div class="row">
-                <h1>About</h1>
-                <div class="block"></div>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                    labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-                    dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit
-                    amet.</p>
-            </div>
-            <div class="row">
-                <div class="six columns">
-                    <h3><span class="typcn typcn-device-desktop icon"></span>Our Process</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-                        beatae vitae dicta sunt explicabo.</p>
+                <div class="col-sm">
+                    <img class="img-fluid imgme center" src="./assets/img/DSC_0112 (1).jpg" alt="">
                 </div>
-                <div class="six columns">
-                    <h3><span class="typcn typcn-pen icon"></span>Our Approach</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-                        beatae vitae dicta sunt explicabo.</p>
-                </div>
-                <div class="row">
-                    <div class="six columns">
-                        <h3><span class="typcn typcn-cog-outline icon"></span>Our Goal</h3>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto beatae vitae dicta sunt explicabo.</p>
-                    </div>
-                    <div class="six columns">
-                        <h3><span class="typcn typcn-lightbulb icon"></span>Our Mission</h3>
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto beatae vitae dicta sunt explicabo.</p>
-                    </div>
+                <div class="col-sm ">
+                    <h1 class="text-center">Sobre mi</h1>
+                    <div class="block"></div>
+
+                    <p class="text-center up"> Soy Ismary Salges, mujer perseverante, comprometida con enorme ganas de
+                        seguir
+                        creciendo
+                        en lo
+                        personal y profesional.</p>
+                    <p class="text-justify up">Estudié Administración de Empresas, por reinvención personal Front End
+                        Developer,donde
+                        encontré un mundo
+                        lleno de posibilidades,tecnologías y herramientas. Me apasionan los temas de transformación
+                        digital entre ellos
+                        Apis, Big Data, E commerce y todo lo relacionado con el desarrollo digital.
+                        Apasionada en la cocina, natación y de las series basadas en hechos reales.
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Team Section
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Proyecto Section -->
 
     <section id="team">
         <div class="container">
@@ -131,8 +117,7 @@
         </div>
     </section>
 
-    <!-- Skills Section
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Skills Section  -->
 
     <section id="skills">
         <div class="container">
@@ -276,8 +261,16 @@
         </div>
     </footer>
 
+    <!-- Boostrap -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
     <!-- jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
     <script src="./assets/js/app.js"></script>
 </body>
 
