--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Boostrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <!--  Devicon-->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+    <!-- CCS -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
     <title>Document</title>
@@ -81,7 +86,7 @@
     <section id="team">
         <div class="container">
             <div class="row">
-                <h1>Meet the Team</h1>
+                <h1>Proyectos</h1>
                 <div class="block"></div>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                     labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
@@ -121,103 +126,22 @@
 
     <section id="skills">
         <div class="container">
-            <h1>Services</h1>
-            <div class="block"></div>
-            <div class="row">
-                <div class="one-third column">
-                    <h3>Design</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit
-                        eligendi amet nobis repellat natus.</p>
+            <h1>Herramientas</h1>
+            <div class="row align-items-center">
+                <div class="col">              
+                <div class="main-content-icons">
+                    <i class="material-icons"><i class="devicon-html5-plain"></i></i>
+                    <i class="material-icons"><i class="devicon-css3-plain"></i></i>
+                    <i class="material-icons"><i class="devicon-javascript-plain"></i></i>
+                    <i class="material-icons"><i class="devicon-github-plain"></i></i>
+                    <i class="material-icons"><i class="devicon-bootstrap-plain"></i></i>
+                    <i class="material-icons"><i class="devicon-nodejs-plain"></i></i>
+                    <i class="material-icons"><i class="devicon-slack-plain"></i></i>
+                    <i class="material-icons"><i class="devicon-visualstudio-plain"></i></i>
+                    <i class="material-icons"><i class="devicon-react-original"></i></i>
                 </div>
-                <div class="one-third column">
-                    <h3>Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit
-                        eligendi amet nobis repellat natus.</p>
-                </div>
-                <div class="one-third column">
-                    <h3>Marketing</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, recusandae, at, labore velit
-                        eligendi amet nobis repellat natus.</p>
-                </div>
+                </div> 
             </div>
-            <div class="row">
-                <div class="eight columns">
-                    <div class="progressBar">
-                        <h4>HTML5</h4>
-                        <div class="progressBarContainer">
-                            <div class="progressBarValue value-90"></div>
-                        </div>
-                    </div>
-                    <div class="progressBar">
-                        <h4>CSS3</h4>
-                        <div class="progressBarContainer">
-                            <div class="progressBarValue value-80"></div>
-                        </div>
-                    </div>
-                    <div class="progressBar">
-                        <h4>Jquery</h4>
-                        <div class="progressBarContainer">
-                            <div class="progressBarValue value-30"></div>
-                        </div>
-                    </div>
-                    <div class="progressBar">
-                        <h4>WordPress</h4>
-                        <div class="progressBarContainer">
-                            <div class="progressBarValue value-70"></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="four columns">
-                    <p>Lorem ipsum dolor sit amet, enim soluta consectetur adipisicing elit. Sit, eius, itaque, porro,
-                        beatae impedit officia tenetur reiciendis in quia eum autem. Enim soluta consectetur
-                        adipisicing elit.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Portfolio Section
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-    <section id="portfolio">
-        <div class="container">
-            <h1>Work</h1>
-            <div class="block"></div>
-            <div class="row">
-                <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work One" /></div>
-                <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Two" /></div>
-                <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Three" /></div>
-                <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Four" /></div>
-            </div>
-            <div class="row" style="margin-top: 30px;">
-                <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Five" /></div>
-                <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Six" /></div>
-                <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Seven" /></div>
-                <div class="three columns"> <img src="http://placehold.it/220x220" class="image" alt="Work Eight" /></div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Testimonials Section
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-    <section id="testimonial">
-        <div class="container">
-            <div class="quoteLoop">
-                <blockquote class="quote"> <img src="http://placehold.it/100x100" width="100" height="100" alt="" />
-                    <h5>&nbsp;<br>
-                        &rdquo;Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                        incididunt ut labore et dolore magna aliqua.&rdquo;<br>
-                        <small>Steve Bruce, Sed ut perspiciatis unde omnis</small></h5>
-                </blockquote>
-                <blockquote class="quote"> <img src="http://placehold.it/100x100" width="100" height="100" alt="" />
-                    <h5>&nbsp;<br>
-                        &ldquo;Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                        laudantium, totam rem aperiam.&rdquo;<br>
-                        <small>Tom Jones, Sed ut perspiciatis unde omnis</small></h5>
-                </blockquote>
-            </div>
-        </div>
     </section>
 
     <!-- Contact Section
