--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
     <!-- Boostrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
@@ -74,7 +73,7 @@
                         lleno de posibilidades,tecnologías y herramientas. Me apasionan los temas de transformación
                         digital entre ellos
                         Apis, Big Data, E commerce y todo lo relacionado con el desarrollo digital.
-                        Apasionada en la cocina, natación y de las series basadas en hechos reales.
+                       
                 </div>
             </div>
         </div>
@@ -142,7 +141,6 @@
         <div class="container">
             <h1 class="titleRed">Herramientas</h1>
             <div class="row align-items-center">
-         
                 <div class="col">
                     <div class="main-content-icons">
                         <i class="material-icons"><i class="devicon-html5-plain"></i></i>
@@ -164,7 +162,7 @@
     <section id="contact">
         <div class="container">
             <h1 class=" titleRed">Contact</h1>
-
+            <a href="./cv/Ismary E Salges .pdf">CV</a>
 
         </div>
     </section>
