--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         lleno de posibilidades,tecnologías y herramientas. Me apasionan los temas de transformación
                         digital entre ellos
                         Apis, Big Data, E commerce y todo lo relacionado con el desarrollo digital.
-                       
+
                 </div>
             </div>
         </div>
@@ -84,10 +84,10 @@
     <section id="proyectos">
         <div class="container">
             <div class="row justify-content-center">
-                <h1 class="titleRed">Proyectos</h1>
+                <h1 class="titleRed text-center">Proyectos</h1>
             </div>
-            <div class="row justify-content-center">
-                <div class="col">
+            <div class="row">
+                <div class="col d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
@@ -139,40 +139,33 @@
 
     <section id="skills">
         <div class="container">
-            <h1 class="titleRed">Herramientas</h1>
-            <div class="row align-items-center">
+            <div>
+                <h1 class="titleRed">Herramientas</h1>
+            </div>
                 <div class="col">
                     <div class="main-content-icons">
-                        <i class="material-icons"><i class="devicon-html5-plain"></i></i>
-                        <i class="material-icons"><i class="devicon-css3-plain"></i></i>
-                        <i class="material-icons"><i class="devicon-javascript-plain"></i></i>
-                        <i class="material-icons"><i class="devicon-github-plain"></i></i>
-                        <i class="material-icons"><i class="devicon-bootstrap-plain"></i></i>
-                        <i class="material-icons"><i class="devicon-nodejs-plain"></i></i>
-                        <i class="material-icons"><i class="devicon-slack-plain"></i></i>
-                        <i class="material-icons"><i class="devicon-visualstudio-plain"></i></i>
-                        <i class="material-icons"><i class="devicon-react-original"></i></i>
+                        <i class="material-icons"><i class="devicon-html5-plain iconsColors"></i></i>
+                        <i class="material-icons"><i class="devicon-css3-plain iconsColors"></i></i>
+                        <i class="material-icons"><i class="devicon-javascript-plain iconsColors"></i></i>
+                        <i class="material-icons"><i class="devicon-github-plain iconsColors"></i></i>
+                        <i class="material-icons"><i class="devicon-bootstrap-plain iconsColors"></i></i>
+                        <i class="material-icons"><i class="devicon-nodejs-plain iconsColors"></i></i>
+                        <i class="material-icons"><i class="devicon-slack-plain iconsColors"></i></i>
+                        <i class="material-icons"><i class="devicon-visualstudio-plain iconsColors"></i></i>
+                        <i class="material-icons"><i class="devicon-react-original iconsColors"></i></i>
                     </div>
                 </div>
-            </div>
-    </section>
-
-    <!-- Contact Section -->
-
-    <section id="contact">
-        <div class="container">
-            <h1 class=" titleRed">Contact</h1>
-            <a href="./cv/Ismary E Salges .pdf">CV</a>
-
+            
         </div>
     </section>
 
-    <!-- Footer Section
-      –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <!-- Footer Section -->
 
-    <footer>
+    <footer id="contact">
         <div class="container">
-            <div class="nine columns">
+            <div>
+                <h1>Contacto</h1>
+                <a href="./cv/Ismary E Salges .pdf">CV</a>
                 <p>Ismary Salges - 2018</p>
             </div>
         </div>
