--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 
 <head>
     <meta charset="UTF-8">
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Ismary Salges</title>
+    <link rel="shortcut icon" href="./assets/img/eficaz.png" type='image/png'/>
     <!-- Boostrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <!-- Font awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">   
     <!--  Devicon-->
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <!-- CCS -->
     <link rel="stylesheet" href="./assets/css/style.css">
-
-    <title>Ismary Salges</title>
+   
 </head>
 
 <body>
@@ -84,7 +88,7 @@
     <section id="proyectos">
         <div class="container">
             <div class="row justify-content-center">
-                <h1 class="titleRed text-center">Proyectos</h1>
+                <h1 class="titleRed text-center prueba">Proyectos</h1>
             </div>
             <div class="row">
                 <div class="col d-flex justify-content-center">
@@ -92,8 +96,19 @@
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <p class="card-text">Translab</p>
+                            <a href="#" class="btn btn-primary">Demo</a>
+                            <a href="https://github.com/IsmarySalgesM/Translab-2.0"><i class="devicon-github-plain"></i></a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col d-flex justify-content-center">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">Movie App</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -103,8 +118,7 @@
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <p class="card-text">Api Imagen</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -114,8 +128,7 @@
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <p class="card-text">Pincash</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -125,8 +138,7 @@
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the
-                                bulk of the card's content.</p>
+                            <p class="card-text">Pincash</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
@@ -166,6 +178,8 @@
             <div>
                 <h1>Contacto</h1>
                 <a href="./cv/Ismary E Salges .pdf">CV</a>
+                <a href="https://www.linkedin.com/in/ismarysalges/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/IsmarySalgesM"><i class="devicon-github-plain"></i></a>
                 <p>Ismary Salges - 2018</p>
             </div>
         </div>
