--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
                     </div>
                 </div>
                 <div class="col d-flex justify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                <div class="col d-flex justify-content-center">
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src=".../100px180/" alt="Card image cap">
                         <div class="card-body">
@@ -142,8 +153,8 @@
             <div>
                 <h1 class="titleRed">Herramientas</h1>
             </div>
-                <div class="col">
-                    <div class="main-content-icons">
+                <div class="col ">
+                    <div class="d-flex justify-content-center main-content-icons">
                         <i class="material-icons"><i class="devicon-html5-plain iconsColors"></i></i>
                         <i class="material-icons"><i class="devicon-css3-plain iconsColors"></i></i>
                         <i class="material-icons"><i class="devicon-javascript-plain iconsColors"></i></i>
