--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
 	<!-- CCS -->
 	<link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/">
 
 
 </head>
@@ -81,9 +82,9 @@
 
 	<!-- Proyecto Section -->
 
-	<section class="" id="proyectos">
+	<section class="allView" id="proyectos">
 		<div class="container">
-			<div class="row allView justify-content-center">
+			<div class="row  justify-content-center">
 				<h1 class="titleRed text-center">Proyectos</h1>
 			</div>
 
@@ -119,7 +120,7 @@
 				</div>
 				<div class="col-12 col-md-6 col-lg-4">
 					<div class="card">
-						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-33-44.png" alt="Card image cap">
+						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-18 10-31-17.png" alt="Card image cap">
 						<div class="card-body">
 							<h5 class="card-title">Movie-Api</h5>
 							<p class="card-text"> App muestra todas las peliculas a traves de un buscador.</p>
@@ -149,24 +150,26 @@
 	<!-- Skills Section  -->
 
 	<section class="" id="skills">
-		<div class="container">
-			<div class="row allView">
+		<div class="container allView">
+			<div class="row  d-flex justify-content-center">
 				<div class="col-12">
-					<h1 class="titleRed">Herramientas</h1>
+					<h1 class="titleRed abc">Herramientas</h1>
 				</div>
-				<div class="col-12 col-md-10 col-lg-8 ">
-					<i class="devicon-css3-plain iconsColors material-icons"></i>
+				<div class="col-12 col-md-10 col-lg-8 abc">
+					<i class="devicon-css3-plain iconsColors material-icons "></i>
 					<i class="devicon-html5-plain iconsColors material-icons"></i>
 					<i class="devicon-javascript-plain iconsColors material-icons"></i>
 					<i class="devicon-github-plain iconsColors material-icons"></i>
 					<i class="devicon-slack-plain iconsColors material-icons"></i>
-					<i class="devicon-bootstrap-plain iconsColors material-icons"></i>
-					<i class="devicon-nodejs-plain iconsColors material-icons"></i>
-					<i class="devicon-visualstudio-plain iconsColors material-icons"></i>
-					<i class="devicon-react-original iconsColors material-icons"></i>
+				
 				</div>
 
 				<div class="col-12 col-md-10 col-lg-8">
+					<i class="devicon-trello-plain  material-icons"></i>
+					<i class="devicon-bootstrap-plain  material-icons"></i>
+					<i class="devicon-nodejs-plain  material-icons"></i>
+					<i class="devicon-visualstudio-plain  material-icons"></i>
+					<i class="devicon-react-original  material-icons"></i>
 
 				</div>
 			</div>
@@ -176,14 +179,15 @@
 
 	<!-- Footer Section -->
 
-	<footer class="" id="contact">
+	<footer class="allView" id="contact">
 		<div class="container">
-			<div class="row allView">
+			<div class="row justify-content-center">
+
 				<div>
-					<h1>Contacto</h1>
-					<a href="./cv/Ismary E Salges .pdf" target="_blank">CV</a>
-					<a href="https://www.linkedin.com/in/ismarysalges/" target="_blank"><i class="fab fa-linkedin"></i></a>
-					<a href="https://github.com/IsmarySalgesM" target="_blank"><i class="devicon-github-plain"></i></a>
+					<h1 class="titleWhite">Contacto</h1>
+					<a href="./cv/Ismary E Salges .pdf" target="_blank" ><i class="icon-contac fas fa-file-pdf"></i></a>
+					<a href="https://www.linkedin.com/in/ismarysalges/" target="_blank"><i class=" icon-contac fab fa-linkedin"></i></a>
+					<a href="https://github.com/IsmarySalgesM" target="_blank"><i class="icon-contac devicon-github-plain"></i></a>
 					<p>Ismary Salges - 2018</p>
 				</div>
 			</div>
