portafolio pre-ok

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<img class="img-fluid imgme center" src="./assets/img/DSC_0112 (1).jpg" alt="">
 				</div>
 				<div class="col-sm ">
-					<h1 class="text-center titleRed">Sobre mi</h1>
+					<h1 class="text-center titleRed">SOBRE MI</h1>
 
 
 					<p class="text-justify"> Soy Ismary Salges, mujer perseverante, comprometida con enorme ganas de
@@ -85,7 +85,7 @@
 	<section class="allView" id="proyectos">
 		<div class="container">
 			<div class="row  justify-content-center">
-				<h1 class="titleRed text-center">Proyectos</h1>
+				<h1 class="titleRed text-center">PROYECTOS</h1>
 			</div>
 
 			<div class="row">
@@ -93,7 +93,7 @@
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-07-09.png" alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title">Registro de Visitantes</h5>
+							<h3 class="card-title">Registro de Visitantes</h3>
 							<p class="card-text">App-Web responsive, simpliﬁca el proceso de registro de visita del IF
 								Blanco Recoleta, a través de un correo electronico.</p>
 							<p class="card-text">Herramientas utilizadas: Firebase, Bootstrap, Javascript,Htmls5 y Ccs3</p>
@@ -108,7 +108,7 @@
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-33-44.png" alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title">Translab</h5>
+							<h3 class="card-title">Translab</h3>
 							<p class="card-text"> App que informa el saldo actual de tu tarjeta bip, también según la
 								tarifa muestra el saldo restado.</p>
 							<p class="card-text">Herramientas utilizadas: Firebase, Bootstrap ApiBip, Javascript,
@@ -122,7 +122,7 @@
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-18 10-31-17.png" alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title">Movie-Api</h5>
+							<h3 class="card-title">Movie-Api</h3>
 							<p class="card-text"> App muestra todas las peliculas a traves de un buscador.</p>
 							<p class="card-text">Herramientas utilizadas: Api OMDB, React, Reactstrap.</p>
 							<a href="https://movieapp-.herokuapp.com/" target="_blank"><i class="fas fa-desktop"></i></a>
@@ -134,7 +134,7 @@
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 21-28-41.png" alt="Card image cap">
 						<div class="card-body">
-							<h5 class="card-title">Pincash</h5>
+							<h3 class="card-title">Pincash</h3>
 							<p class="card-text"> App donde ubica tu geocalización, además te indica los cajeros cerca de ti.</p>
 							<p class="card-text">Herramientas utilizadas: Api BCI,Api HERE MAPS, Javascript,Html y Ccs. </p>
 							<p class="card-text">Front-End: Maria Jose Vargas, Viviana Marcelo e Ismary Salges. UX: Natalia Miranda </p>
@@ -153,7 +153,7 @@
 		<div class="container allView">
 			<div class="row  d-flex justify-content-center">
 				<div class="col-12">
-					<h1 class="titleRed abc">Herramientas</h1>
+					<h1 class="titleRed abc">HERRAMIENTAS</h1>
 				</div>
 				<div class="col-12 col-md-10 col-lg-8 abc">
 					<i class="devicon-css3-plain iconsColors material-icons "></i>
@@ -184,7 +184,7 @@
 			<div class="row justify-content-center">
 
 				<div>
-					<h1 class="titleWhite">Contacto</h1>
+					<h1 class="titleWhite">CONTACTO</h1>
 					<a href="./cv/Ismary E Salges .pdf" target="_blank" ><i class="icon-contac fas fa-file-pdf"></i></a>
 					<a href="https://www.linkedin.com/in/ismarysalges/" target="_blank"><i class=" icon-contac fab fa-linkedin"></i></a>
 					<a href="https://github.com/IsmarySalgesM" target="_blank"><i class="icon-contac devicon-github-plain"></i></a>
