--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 					<p class="text-justify"> Soy Ismary Salges, mujer perseverante, comprometida con enorme ganas de
 						seguir creciendo en lo personal y profesional.</p>
-					<p class="text-justify">Estudié Administración de Empresas, por reinvención personal Front End
+					<p class="text-justify">Estudié Administración de Empresas, por reinvención personal Front-End
 						Developer, donde encontré un mundo lleno de posibilidades, tecnologías y herramientas. Me
 						apasionan los temas de transformación
 						digital entre ellos Apis, Big Data, Inteligencia Artificial, E commerce y todo lo relacionado
@@ -93,7 +93,6 @@
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-07-09.png" alt="Card image cap">
 						<div class="card-body">
-							<h3 class="card-title">Registro de Visitantes</h3>
 							<p class="card-text">App-Web responsive, simpliﬁca el proceso de registro de visita del IF
 								Blanco Recoleta, a través de un correo electronico.</p>
 							<p class="card-text">Herramientas utilizadas: Firebase, Bootstrap, Javascript,Htmls5 y Ccs3</p>
@@ -108,7 +107,6 @@
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-33-44.png" alt="Card image cap">
 						<div class="card-body">
-							<h3 class="card-title">Translab</h3>
 							<p class="card-text"> App que informa el saldo actual de tu tarjeta bip, también según la
 								tarifa muestra el saldo restado.</p>
 							<p class="card-text">Herramientas utilizadas: Firebase, Bootstrap ApiBip, Javascript,
@@ -122,7 +120,6 @@
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-18 10-31-17.png" alt="Card image cap">
 						<div class="card-body">
-							<h3 class="card-title">Movie-Api</h3>
 							<p class="card-text"> App muestra todas las peliculas a traves de un buscador.</p>
 							<p class="card-text">Herramientas utilizadas: Api OMDB, React, Reactstrap.</p>
 							<a href="https://movieapp-.herokuapp.com/" target="_blank"><i class="fas fa-desktop"></i></a>
@@ -134,7 +131,6 @@
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 21-28-41.png" alt="Card image cap">
 						<div class="card-body">
-							<h3 class="card-title">Pincash</h3>
 							<p class="card-text"> App donde ubica tu geocalización, además te indica los cajeros cerca de ti.</p>
 							<p class="card-text">Herramientas utilizadas: Api BCI,Api HERE MAPS, Javascript,Html y Ccs. </p>
 							<p class="card-text">Front-End: Maria Jose Vargas, Viviana Marcelo e Ismary Salges. UX: Natalia Miranda </p>
@@ -156,7 +152,7 @@
 					<h1 class="titleRed abc">HERRAMIENTAS</h1>
 				</div>
 				<div class="col-12 col-md-10 col-lg-8 abc">
-					<i class="devicon-css3-plain iconsColors material-icons "></i>
+					<i class="devicon-css3-plain iconsColors material-icons "></i>	
 					<i class="devicon-html5-plain iconsColors material-icons"></i>
 					<i class="devicon-javascript-plain iconsColors material-icons"></i>
 					<i class="devicon-github-plain iconsColors material-icons"></i>
@@ -185,7 +181,7 @@
 
 				<div>
 					<h1 class="titleWhite">CONTACTO</h1>
-					<a href="./cv/Ismary E Salges .pdf" target="_blank" ><i class="icon-contac fas fa-file-pdf"></i></a>
+					<a href="./cv/Ismary E Salges.pdf" target="_blank" ><i class="icon-contac fas fa-file-pdf"></i></a>
 					<a href="https://www.linkedin.com/in/ismarysalges/" target="_blank"><i class=" icon-contac fab fa-linkedin"></i></a>
 					<a href="https://github.com/IsmarySalgesM" target="_blank"><i class="icon-contac devicon-github-plain"></i></a>
 					<p>Ismary Salges - 2018</p>
