--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
 			</div>
 
 			<div class="row">
-				<div class="col-12 col-md-6 col-lg-4">
+				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-07-09.png" alt="Card image cap">
 						<div class="card-body">
 							<p class="card-text">App-Web responsive, simpliﬁca el proceso de registro de visita del IF
 								Blanco Recoleta, a través de un correo electronico.</p>
 							<p class="card-text">Herramientas utilizadas: Firebase, Bootstrap, Javascript,Htmls5 y Ccs3</p>
-							<a href="https://ismarysalgesm.github.io/Registro-de-Visitantes/" target="_blank"><i class="fas fa-desktop"></i></a>
-							<a href="https://github.com/IsmarySalgesM/Registro-de-Visitantes" target="_blank"><i class="devicon-github-plain"></i></a>
+							<a href="https://ismarysalgesm.github.io/Registro-de-Visitantes/" target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
+							<a href="https://github.com/IsmarySalgesM/Registro-de-Visitantes" target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
 
 						</div>
 					</div>
 				</div>
 
-				<div class="col-12 col-md-6 col-lg-4">
+				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-33-44.png" alt="Card image cap">
 						<div class="card-body">
@@ -111,31 +111,31 @@
 								tarifa muestra el saldo restado.</p>
 							<p class="card-text">Herramientas utilizadas: Firebase, Bootstrap ApiBip, Javascript,
 								Htmls5 y Ccs3</p>
-							<a href="https://ismarysalgesm.github.io/Translab-2.0/" target="_blank"><i class="fas fa-desktop"></i></a>
-							<a href="https://github.com/IsmarySalgesM/Translab-2.0" target="_blank"><i class="devicon-github-plain"></i></a>
+							<a href="https://ismarysalgesm.github.io/Translab-2.0/" target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
+							<a href="https://github.com/IsmarySalgesM/Translab-2.0" target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
+				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-18 10-31-17.png" alt="Card image cap">
 						<div class="card-body">
 							<p class="card-text"> App muestra todas las peliculas a traves de un buscador.</p>
 							<p class="card-text">Herramientas utilizadas: Api OMDB, React, Reactstrap.</p>
-							<a href="https://movieapp-.herokuapp.com/" target="_blank"><i class="fas fa-desktop"></i></a>
-							<a href="https://github.com/IsmarySalgesM/MovieApi" target="_blank"><i class="devicon-github-plain"></i></a>
+							<a href="https://movieapp-.herokuapp.com/" target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
+							<a href="https://github.com/IsmarySalgesM/MovieApi" target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
+				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
 						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 21-28-41.png" alt="Card image cap">
 						<div class="card-body">
 							<p class="card-text"> App donde ubica tu geocalización, además te indica los cajeros cerca de ti.</p>
 							<p class="card-text">Herramientas utilizadas: Api BCI,Api HERE MAPS, Javascript,Html y Ccs. </p>
 							<p class="card-text">Front-End: Maria Jose Vargas, Viviana Marcelo e Ismary Salges. UX: Natalia Miranda </p>
-							<a href="https://github.com/IsmarySalgesM/Pincash" target="_blank"><i class="fas fa-desktop"></i></a>
-							<a href="https://lnkd.in/e87DVZh" target="_blank"><i class="devicon-github-plain"></i></a>
+							<a href="https://github.com/IsmarySalgesM/Pincash" target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
+							<a href="https://lnkd.in/e87DVZh" target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
 						</div>
 					</div>
 				</div>
@@ -179,7 +179,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 
-				<div>
+				<div >
 					<h1 class="titleWhite">CONTACTO</h1>
 					<a href="./cv/Ismary E Salges.pdf" target="_blank" ><i class="icon-contac fas fa-file-pdf"></i></a>
 					<a href="https://www.linkedin.com/in/ismarysalges/" target="_blank"><i class=" icon-contac fab fa-linkedin"></i></a>
