agregando un proyecto

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				</div>
 				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
-						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-18 10-31-17.png" alt="Card image cap">
+						<img class=" card-img-top" src="./assets/img/Captura de pantalla de 2018-10-18 10-31-17.png" alt="Card image cap">
 						<div class="card-body">
 							<p class="card-text"> App muestra todas las peliculas a traves de un buscador.</p>
 							<p class="card-text">Herramientas utilizadas: Api OMDB, React, Reactstrap.</p>
@@ -136,6 +136,17 @@
 							<p class="card-text">Front-End: Maria Jose Vargas, Viviana Marcelo e Ismary Salges. UX: Natalia Miranda </p>
 							<a href="https://github.com/IsmarySalgesM/Pincash" target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
 							<a href="https://lnkd.in/e87DVZh" target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
+						</div>
+					</div>
+				</div>
+				<div class="col-12 col-md-4 col-lg-4">
+					<div class="card">
+						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-21 19-52-43.png" alt="Card image cap">
+						<div class="card-body">
+							<p class="card-text"> Divertido juego de memoria en linea</p>
+							<p class="card-text">Herramientas utilizadas: React </p>
+							<a href="https://cardgames-.herokuapp.com/"target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
+							<a href="https://github.com/IsmarySalgesM/CardGames"  target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
 						</div>
 					</div>
 				</div>
