--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<div class="row">
 				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
-						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-07-09.png" alt="Card image cap">
+						<img class="card-img-top" src="./assets/img/registro-visita.jpg" alt="Card image cap">
 						<div class="card-body">
 							<p class="card-text">App-Web responsive, simpliﬁca el proceso de registro de visita del IF
 								Blanco Recoleta, a través de un correo electronico.</p>
@@ -105,7 +105,7 @@
 
 				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
-						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 19-33-44.png" alt="Card image cap">
+						<img class="card-img-top" src="./assets/img/translab.jpg" alt="Card image cap">
 						<div class="card-body">
 							<p class="card-text"> App que informa el saldo actual de tu tarjeta bip, también según la
 								tarifa muestra el saldo restado.</p>
@@ -118,22 +118,24 @@
 				</div>
 				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
-						<img class=" card-img-top" src="./assets/img/Captura de pantalla de 2018-10-18 10-31-17.png" alt="Card image cap">
+						<img class=" card-img-top" src="./assets/img/movieAPP.jpg" alt="Card image cap">
 						<div class="card-body">
-							<p class="card-text"> App muestra todas las peliculas a traves de un buscador.</p>
-							<p class="card-text">Herramientas utilizadas: Api OMDB, React, Reactstrap.</p>
+							<p class="card-text"> Maravillosa App donde muestra todas las peliculas de tu preferencia a través de un buscador.</p>
+							<p class="card-text jest">Herramientas utilizadas: Api OMDB, React, Reactstrap, Trello.</p>
 							<a href="https://movieapp-.herokuapp.com/" target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
 							<a href="https://github.com/IsmarySalgesM/MovieApi" target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
+						
 						</div>
 					</div>
 				</div>
+			</div>
+				<div class="row justify-content-center">
 				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
-						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-17 21-28-41.png" alt="Card image cap">
+						<img class="card-img-top" src="./assets/img/pincash.jpg" alt="Card image cap">
 						<div class="card-body">
 							<p class="card-text"> App donde ubica tu geocalización, además te indica los cajeros cerca de ti.</p>
-							<p class="card-text">Herramientas utilizadas: Api BCI,Api HERE MAPS, Javascript,Html y Ccs. </p>
-							<p class="card-text">Front-End: Maria Jose Vargas, Viviana Marcelo e Ismary Salges. UX: Natalia Miranda </p>
+							<p class="card-text">Herramientas utilizadas: Api BCI,Api Here. </p>
 							<a href="https://github.com/IsmarySalgesM/Pincash" target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
 							<a href="https://lnkd.in/e87DVZh" target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
 						</div>
@@ -141,9 +143,9 @@
 				</div>
 				<div class="col-12 col-md-4 col-lg-4">
 					<div class="card">
-						<img class="card-img-top" src="./assets/img/Captura de pantalla de 2018-10-21 19-52-43.png" alt="Card image cap">
+						<img class="card-img-top" src="./assets/img/memoryCard.jpg" alt="Card image cap">
 						<div class="card-body">
-							<p class="card-text"> Divertido juego de memoria en linea</p>
+							<p class="card-text"> Divertida App donde puedes jugar en linea un juego de memoria.</p>
 							<p class="card-text">Herramientas utilizadas: React </p>
 							<a href="https://cardgames-.herokuapp.com/"target="_blank"><i class="demo-icons fas fa-desktop"></i></a>
 							<a href="https://github.com/IsmarySalgesM/CardGames"  target="_blank"><i class="demo-icons devicon-github-plain"></i></a>
